--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 		<script
+			src="https://kit.fontawesome.com/9d9362ad7b.js"
+			crossorigin="anonymous"
+		></script>
+
+		<script
 			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 			crossorigin="anonymous"
